Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <img src="https://i.imgur.com/VRZnOqE.jpg">
 <img src="https://i.imgur.com/VRZnOqE.jpg" alt="My Trip">
-<img 
+<img src="https://i.imgur.com/VRZnOqE.jpg" alt="My Trip" title="Super Fun">
 
 </body>
 </html>
